fix main page content margin on tablets when sidebar is open

--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -3,6 +3,10 @@
 @media only screen and (max-width: 1024px) {
   .sidebar:has(> :global(#navbar-menu-toggle:checked)) {
     display: flex;
+
+    &+ :global(.main-content) {
+      margin-left: var(--sidebar-width);
+    }
   }
 
   .sidebar:has(> :global(#navbar-menu-toggle:not(:checked))) {
